--- a/week_2/week_2.css
+++ b/week_2/week_2.css
@@ -1,50 +1,94 @@
 body {
-    width: 100%;
-    height: 3000px;
-    margin: 0;
-    padding: 5;
-    background-color: cornflowerblue;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: rgb(6, 6, 43);
- 
-  }
-  
-   #border{    
-    top: 0;
-    left: 0;
-    border-width: 5px;
-    border-color: rgb(15, 15, 119);
-    border-style: solid;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 4px;
-    box-sizing: border-box;
-  }
-         
-  .navbar-custom {
-    background-color: rgb(92, 92, 224);
+  width: 100%;
+  height: 1500px;
+  margin: 0;
+  padding: 5;
+  background-color: #d7e4fc;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(6, 6, 43);
 }
-.navbar-custom .navbar-brand,
-.navbar-custom .navbar-text {
-    color: rgb(19, 6, 63);
+
+#border {
+  top: 0;
+  left: 0;
+  border-width: 5px;
+  border-color: rgb(15, 15, 119);
+  border-style: solid;
+  width: 100%;
+  height: 100%;
+  padding: 4px;
+  box-sizing: border-box;
 }
-  #forms{
-    padding: 10px;
-  }
+.topnav {
+  background-color: rgb(40 40 133);
+  overflow: hidden;
+}
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-  input{
-    background-color: rgb(80, 87, 139);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border-width: 2px;
-    border-color: rgb(19, 6, 63);
-    border-style: double;
-  }
+.topnav a.active {
+  background-color: #092d20;
+  color: white;
+}
 
-  #img {
-    opacity: 0.5;
-  }
-  
-  #img:hover {
-    opacity: 1.0;
-  }
+#forms {
+  padding: 10px;
+  margin: 10px;
+  border: 3px solid rgb(15, 15, 119);
+}
+
+input {
+  background-color: rgb(173 181 240);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  border-width: 2px;
+  border-color: rgb(19, 6, 63);
+  border-style: double;
+}
+
+#img {
+  padding: 3px;
+  opacity: 1;
+}
+
+#img:hover {
+  opacity: 0.75;
+}
+
+#username {
+  margin-left: 35px;
+}
+
+#email {
+  margin-left: 67px;
+}
+
+#password {
+  margin-left: 40px;
+}
+
+#dob {
+  margin-left: 16px;
+  padding-right: 19px;
+  padding-left: 21px;
+}
+
+#age {
+  margin-left: 77px;
+}
+
+.container {
+  background-color: #27b4ff;
+  padding: 4px;
+  margin-top: 4px;
+  text-align: center;
+}
